Fix bug where the select options would still overlap the nav bar

--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -52,7 +52,7 @@
   position: sticky;
   top: 0;
   column-gap: 4px;
-  z-index: 2;
+  z-index: 3;
 
   img {
     width: 50px;
